--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,15 @@
 @import "./static-scrollbar.css";
 
 body {
+  min-height: 100vh;
+  /* min-height: -webkit-fill-available; */
+}
+
+html {
+  /* height: -webkit-fill-available; */
+}
+
+body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
