--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
 @import "./static-scrollbar.css";
+@import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css";
 
 body {
   margin: 0;
@@ -14,3 +15,6 @@ code {
     monospace;
 }
 
+.pagination > *{
+  padding: 4px;
+}
