--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,4 @@
 @import "./static-scrollbar.css";
-@import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css";
 
 body {
   margin: 0;
@@ -21,4 +20,10 @@ code {
 
 .active > a > button{
   background: var(--chakra-colors-green-200);
+}
+
+.pagination {
+  display: flex;
+  padding-left: 0;
+  list-style: none;
 }
